--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,206 @@
-.App {
-  text-align: center;
+
+@media all and (min-width: 0px) {
+
+  .project-app{
+    /* background-image: url('/public/image/bg/bg-img.jpg'); */
+    /* width: 480px;
+    height: 480px */
+  }
+
+  /* Styling Header component */
+  .custom-center-btn{
+    position: relative;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .userAcctInfo{
+    background-color: #c3c3c3;
+    color: #33334B;
+    font-weight: 500;
+    border-radius: 8px;
+    padding: 12px;
+    text-align: center;
+    position: absolute;
+    top: 80px;
+    /* right: 27px; */
+    /* width: 95px; */
+    margin: 0 auto;
+  }
+
+  .currencyName{
+    color: #231321;
+    font-weight: 600;
+    font-family: Roboto, sans-serif;
+    text-decoration: italic;
+  }
+
+  .currencyAmt{
+    font-weight: 700;
+  }
+
+
+  /* Styling Purchase component */
+
+  .customise-section{
+    position: relative;
+    top: 370px;
+    background-size: cover;
+    height: 200px;
+    /* margin-top: 300px; */
+  }
+  .customise-section svg{
+    position: absolute;
+    bottom: -10px; 
+    left: 0;
+    width: 100%; 
+    height: 100px;
+    display: block;
+    fill: #c3c3c3;
+    /* fill: #33334B; */
+    /* border: 8px inset #fff; */
+    border-radius: 12px;
+    /* background-color: #c3c3c3; */
+  }
+
+  .sale-info p{
+    margin-top: 0px;
+    margin-bottom: 6px;
+  }
+
+  .claim-container{
+    margin: 30px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 140px;
+  }
+
+  .chart-box{
+    width: 100%;
+    max-width: 300px;
+    margin: 0 auto;
+    position: relative;
+    margin-bottom: 22px;
+    z-index: 2;
+  }
+
+  .customise-row{
+    width: 100%;
+    max-width: 900px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .customise-container, .customise-section{
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .customise-purchase{
+    text-align: center;
+    padding: 60px 20px;
+    /* width: 300px; */
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 320px;
+
+  }
+
+  .purchase-title{
+    font-size: 1.4rem;
+    margin: 10px 0 40px 0;
+  }
+
+  .btn-buy{
+    margin: 12px;
+  }
+  
+
+  .spinner-img{
+    display: inline-block;
+    width: 24px;
+    height: 20px;
+    margin: 0px 29px;
+  }
+
+  .spinner-claim-img{
+    display: inline-block;
+    width: 24px;
+    height: 20px;
+    margin: 0px 18px;
+  }
+
+  
+  .customise-section{
+    margin-top: 0px;
+  }
+  
+  .connect-wallet-container{
+    text-align: center;
+  }
+
+  /* Styling Footer component */
+  .footer{
+    margin-top: 750px;
+  }
+
+  .customise-terms{
+    max-width: 700px;
+    margin: 0 auto;
+  }
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+@media all and (min-width: 429px){
+
+  /* Styling Footer component */
+  .footer{
+    text-align: center;
+  }
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media all and (min-width: 679px){
+  /* Styling Purchase component */
+  .claim-container{
+    margin-top: 250px;
+    margin-bottom: 100px;
+  }
+
+}
+
+@media all and (min-width: 679px){
+  /*  */
+  /* Styling Footer component */
+  .footer{
+    margin-top: 850px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+@media all and (min-width: 992px){
 
-.App-link {
-  color: #61dafb;
-}
+  /* Styling Purchase component */
+  
+  .claim-container{
+    margin-top: 150px;
+  }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  /* Styling Footer component */
+  .footer{
+    margin-top: 650px;
   }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+  
+  
+
 }
